[package]
name = "autoconnect_web"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
actix.workspace = true
actix-web.workspace = true
#actix-web-actors.workspace = true
actix-rt.workspace = true
actix-ws.workspace = true
bytes.workspace = true
bytestring.workspace = true
cadence.workspace = true
futures.workspace = true
futures-locks.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-scope.workspace = true
uuid.workspace = true


autoconnect_common.workspace = true
autoconnect_settings.workspace = true
autoconnect_ws.workspace = true
autopush_common.workspace = true
