[package]
name = "autoconnect_web"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
actix-http.workspace = true
actix-rt.workspace = true
actix-ws.workspace = true
backtrace.workspace = true
bytes.workspace = true
bytestring.workspace = true
cadence.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
slog-scope.workspace = true
thiserror.workspace = true
uuid.workspace = true


autoconnect_common.workspace = true
autoconnect_settings.workspace = true
autoconnect_ws.workspace = true
autopush_common.workspace = true

[dev-dependencies]
actix-codec = "0.5"
actix-http.workspace = true
actix-test.workspace = true
ctor.workspace = true
tokio.workspace = true

autoconnect_common = { workspace = true, features = ["test-support"] }

[features]
bigtable = ["autoconnect_settings/bigtable", "autopush_common/bigtable"]
dual = ["autoconnect_settings/dual", "autopush_common/dual"]
dynamodb = ["autoconnect_settings/dynamodb", "autopush_common/dynamodb"]
emulator = ["autoconnect_settings/emulator", "autopush_common/emulator"]
